# Medes

./: .gitignore  CMakeLists.txt  README.md  build.sh  install-docker.sh  install.sh
cmake/: GenerateCPP.cmake  common.cmake
config/: agent.ini  cluster.json  controller.ini
dedup-controller/: CMakeLists.txt  controller.cc  controller_server.cc  controller_server.h  data_structures.cc  data_structures.h  scheduler.cc
dedup-service/: CMakeLists.txt  data_structures.h  dedup_application.cc  dedup_application.h  dedup_server.cc  dedup_server.h  fingerprint.cc  includes.cc  memory_layer.cc  memory_layer.h  memory_layer_example.cc  memory_manager.cc  memory_manager.h
evaluation/: macro_stats.py  plot_breakdown.py  plot_cdfs.py  plot_coldstarts.py  plot_comparison.py  plot_cs_lat.py  plot_memory.py  plot_mempress.py  plot_microbenchmark.py  plot_two_cs.py  plot_two_lat.py  utils.py
include/: INIReader.h  defs.h
motivation/: analyze.py  calc_dedup.py  exps.tsv  heatmap.py  plot_warm.py  run_motivation.sh
protos/: client.proto  controller.proto  main.proto
rdma/: CMakeLists.txt  rcltmgr.c  rcltmgr.h  rcomm.c  rcomm.h  rparam.h  rsrvmgr.c  rsrvmgr.h  rutil.h
scripts/: README.md  cleanup.sh  remove_dump.sh  remove_nonpages.sh  remove_pages.sh  spawn.sh  start_agent.sh  start_controller.sh  start_docker.sh  test_container.sh  test_docker.sh
scripts/appl/: python-appl0.json  python-appl1.json  python-appl2.json  python-appl3.json  python-appl4.json  python-appl5.json  python-appl6.json  python-appl7.json  python-appl8.json  python-appl9.json
scripts/docker/: base.sh  cold_spawn.sh  dedup.sh  pause.sh  purge.sh  restart.sh  restore.sh  restore_pause.sh
